remove margin class from combat row and fix character card alignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,7 @@ body {
                -1px -1px #000,
                1px -1px #000,
                1px 1px #000;
+  display: table;
 }
 
 #enemy {
@@ -171,8 +172,9 @@ body {
   color: rgb(140, 42, 41);
 }
 
-.margin {
-  margin-top: 150px;
+.alignment{
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .hide {
